[package]
name = "rust_kasa_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = {version = "1.0.196", features = ["derive"] }
anyhow = "1.0.86"
crossterm = "0.28.1"
ratatui = "0.29.0"
rust_kasa = { path = "../rust_kasa"}
